--- a/cpp/test/makefile
+++ b/cpp/test/makefile
@@ -1,4 +1,4 @@
 user_name = $(shell whoami)
 
 hello:hello.cpp
-	/Users/$(user_name)/Programs/emsdk/upstream/emscripten/emcc hello.cpp -s WASM=1 -o hello.wasm
+	/Users/$(user_name)/Programs/emsdk/upstream/emscripten/emcc --bind hello.cpp -s WASM=1 -o hello2.js
