ポインタ難しい

--- a/cpp/makefile
+++ b/cpp/makefile
@@ -20,6 +20,7 @@ OPENCV = /usr/local/Cellar/opencv/4.5.3_2/include/opencv4
 
 # PlaneCalculation/OpenCvOutput.o : PlaneCalculation/OpenCvOutput.cpp
 # 	g++ -c PlaneCalculation/OpenCvOutput.cpp -std=c++14  `pkg-config --cflags opencv4` `pkg-config --libs opencv4`
+user_name = $(shell whoami)
 
 main: main.cpp
 	g++ -c PlaneCalculation/PointDraw.cpp -std=c++14
@@ -27,8 +28,16 @@ main: main.cpp
 	g++ -c PlaneCalculation/SurfaceCalculation.cpp
 	g++ -c PlaneCalculation/GetTime.cpp -std=c++14
 	g++ -c PlaneCalculation/OpenCvOutput.cpp -std=c++14  `pkg-config --cflags opencv4` `pkg-config --libs opencv4`
-	g++ -o main.a main.cpp GetTime.o PointDraw.o Slope.o SurfaceCalculation.o OpenCvOutput.o -v -std=c++14 `pkg-config --cflags opencv4` `pkg-config --libs opencv4`
-	g++ -o main main.cpp GetTime.o PointDraw.o Slope.o SurfaceCalculation.o OpenCvOutput.o -v -std=c++14 `pkg-config --cflags opencv4` `pkg-config --libs opencv4`
+	g++ -c integration.cpp GetTime.o PointDraw.o Slope.o SurfaceCalculation.o OpenCvOutput.o -std=c++14
+
+# ここからmain
+
+	g++ -o main.a main.cpp integration.o -v -std=c++14
+	g++ -o main main.cpp integration.o -v -std=c++14
+
+#ここからforjs
+
+	/Users/$(user_name)/Programs/emsdk/upstream/emscripten/emcc --bind forjs.cpp integration.o -s WASM=1 -o forjs/main.js
 
 # g++ -o main main.cpp -std=c++14 -c -I/Users/maruyama/opt/anaconda3/envs/py39/include/opencv4/
 
