--- a/cpp/makefile
+++ b/cpp/makefile
@@ -36,7 +36,15 @@ target0_e = OpenCvOutput
 forjs_temp_dir = forjsdir
 forjs_prefix = js
 
-opencv = `pkg-config --cflags opencv4` `pkg-config --libs opencv4`
+main_temp_dir = maindir
+
+#opencvI = `pkg-config --cflags opencv4` 
+#opencvL = `pkg-config --libs opencv4`
+
+opencvI = -I/usr/local/opt/opencv/include/opencv4
+opencvL = -L/usr/local/opt/opencv/lib -lopencv_gapi -lopencv_stitching -lopencv_alphamat -lopencv_aruco -lopencv_barcode -lopencv_bgsegm -lopencv_bioinspired -lopencv_ccalib -lopencv_dnn_objdetect -lopencv_dnn_superres -lopencv_dpm -lopencv_face -lopencv_freetype -lopencv_fuzzy -lopencv_hfs -lopencv_img_hash -lopencv_intensity_transform -lopencv_line_descriptor -lopencv_mcc -lopencv_quality -lopencv_rapid -lopencv_reg -lopencv_rgbd -lopencv_saliency -lopencv_sfm -lopencv_stereo -lopencv_structured_light -lopencv_phase_unwrapping -lopencv_superres -lopencv_optflow -lopencv_surface_matching -lopencv_tracking -lopencv_highgui -lopencv_datasets -lopencv_text -lopencv_plot -lopencv_videostab -lopencv_videoio -lopencv_viz -lopencv_wechat_qrcode -lopencv_xfeatures2d -lopencv_shape -lopencv_ml -lopencv_ximgproc -lopencv_video -lopencv_dnn -lopencv_xobjdetect -lopencv_objdetect -lopencv_calib3d -lopencv_imgcodecs -lopencv_features2d -lopencv_flann -lopencv_xphoto -lopencv_photo -lopencv_imgproc -lopencv_core
+$(warning $(opencvI))
+$(warning $(opencvL))
 
 emcc_build = /Users/$(user_name)/Programs/emsdk/upstream/emscripten/emcc
 
@@ -46,12 +54,18 @@ js_c = $(forjs_temp_dir)/$(forjs_prefix)_$(target0_c).o
 js_d = $(forjs_temp_dir)/$(forjs_prefix)_$(target0_d).o
 js_e = $(forjs_temp_dir)/$(forjs_prefix)_$(target0_e).o
 
+cpp_a = $(main_temp_dir)/$(target0_a).o
+cpp_b = $(main_temp_dir)/$(target0_b).o
+cpp_c = $(main_temp_dir)/$(target0_c).o
+cpp_d = $(main_temp_dir)/$(target0_d).o
+cpp_e = $(main_temp_dir)/$(target0_e).o
+
 main: main.cpp
-	g++ -c $(target0_dir)/$(target0_a).cpp -std=c++14
-	g++ -c $(target0_dir)/$(target0_b).cpp -std=c++14
-	g++ -c $(target0_dir)/$(target0_c).cpp -std=c++14
-	g++ -c $(target0_dir)/$(target0_d).cpp -std=c++14
-	g++ -c $(target0_dir)/$(target0_e).cpp -std=c++14 $(opencv)
+	g++ -c $(target0_dir)/$(target0_a).cpp -o $(cpp_a) -std=c++14
+	g++ -c $(target0_dir)/$(target0_b).cpp -o $(cpp_b) -std=c++14
+	g++ -c $(target0_dir)/$(target0_c).cpp -o $(cpp_c) -std=c++14
+	g++ -c $(target0_dir)/$(target0_d).cpp -o $(cpp_d) -std=c++14
+#g++ -c $(target0_dir)/$(target0_e).cpp -std=c++14 $(opencvI) $(opencvL) 
 
 
 #g++ -c integration.cpp -std=c++14
@@ -60,8 +74,8 @@ main: main.cpp
 
 # ここからmain
 
-	g++ -o main.a main.cpp $(target0_a).o $(target0_b).o $(target0_c).o $(target0_d).o $(target0_e).o -std=c++14 $(opencv)
-	g++ -o main main.cpp $(target0_a).o $(target0_b).o $(target0_c).o $(target0_d).o $(target0_e).o -std=c++14 $(opencv)
+	g++ -o main.a main.cpp $(cpp_a).o $(cpp_b).o $(cpp_c).o $(cpp_d).o $(cpp_e).o -std=c++14 $(opencvI) $(opencvL) 
+	g++ -o main main.cpp $(cpp_a).o $(cpp_b).o $(cpp_c).o $(cpp_d).o $(cpp_e).o -std=c++14 $(opencvI) $(opencvL) 
 
 #ここからforjs
 
@@ -70,8 +84,8 @@ main: main.cpp
 	$(emcc_build) -c $(target0_dir)/$(target0_b).cpp -o $(js_b) -std=c++14
 	$(emcc_build) -c $(target0_dir)/$(target0_c).cpp -o $(js_c) -std=c++14
 	$(emcc_build) -c $(target0_dir)/$(target0_d).cpp -o $(js_d) -std=c++14
-	$(emcc_build) -c $(target0_dir)/$(target0_e).cpp -o $(js_e) -std=c++14  $(opencv)
-	$(emcc_build)  $(js_a) $(js_b) $(js_c) $(js_d) $(js_e) --bind forjs.cpp -s WASM=1 -o forjs/wasm_forweb.js
+#$(emcc_build) -c $(target0_dir)/$(target0_e).cpp -o $(js_e) -std=c++14  $(opencvI) $(opencvL) 
+	$(emcc_build) --bind forjs.cpp $(js_a) $(js_b) $(js_c) $(js_d) -s WASM=1 -o forjs/wasm_forweb.js -std=c++14
 
 # g++ -o main main.cpp -std=c++14 -c -I/Users/maruyama/opt/anaconda3/envs/py39/include/opencv4/
 
