--- a/salt_self/package.json
+++ b/salt_self/package.json
@@ -1,31 +1,44 @@
 {
-  "name": "salt_self",
-  "version": "0.1.0",
+  "name": "my-webpack-project",
+  "version": "1.0.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "babel": "^6.23.0",
+    "exports-loader": "^3.1.0",
+    "file-loader": "^6.2.0",
+    "fs": "^0.0.1-security",
+    "http-server": "^14.1.0",
+    "path": "^0.12.7",
     "path-browserify": "^1.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "react-select": "^5.2.2",
+    "stream": "^0.0.2",
     "uuidjs": "^4.2.9",
-    "web-vitals": "^2.1.3"
+    "wasm-loader": "^1.3.0",
+    "web-vitals": "^2.1.3",
+    "webpack-dev-server": "^4.7.3"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "webpack --mode=production --node-env=production",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "build:dev": "webpack --mode=development",
+    "build:prod": "webpack --mode=production --node-env=production",
+    "watch": "webpack --watch"
   },
   "eslintConfig": {
     "extends": [
       "react-app",
       "react-app/jest"
-    ]
+    ],
+    "ignorePatterns": ["./src/App/Salt3DCG/cpp/forjs/wasm_forweb.mjs"]
   },
   "browserslist": {
     "production": [
@@ -38,5 +51,20 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "devDependencies": {
+    "@babel/core": "^7.16.7",
+    "@babel/preset-react": "^7.16.7",
+    "@webpack-cli/generators": "^2.4.1",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^8.2.3",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-es2016": "^6.24.1",
+    "html-webpack-plugin": "^5.5.0",
+    "webpack": "^5.66.0",
+    "webpack-cli": "^4.9.1"
+  },
+  "description": "My webpack project"
+  
 }
+
