--- a/salt_self/package.json
+++ b/salt_self/package.json
@@ -3,10 +3,13 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
+    "@babel/preset-env": "^7.16.10",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "babel": "^6.23.0",
+    "babel-plugin-transform-react-jsx": "^6.24.1",
+    "css-loader": "^6.5.1",
     "exports-loader": "^3.1.0",
     "file-loader": "^6.2.0",
     "fs": "^0.0.1-security",
@@ -19,6 +22,11 @@
     "react-scripts": "5.0.0",
     "react-select": "^5.2.2",
     "stream": "^0.0.2",
+    "style-loader": "^3.3.1",
+    "ts-loader": "^9.2.6",
+    "ts-node": "^10.4.0",
+    "typescript": "^4.5.4",
+    "uglifyjs-webpack-plugin": "^2.2.0",
     "uuidjs": "^4.2.9",
     "wasm-loader": "^1.3.0",
     "web-vitals": "^2.1.3",
@@ -38,7 +46,9 @@
       "react-app",
       "react-app/jest"
     ],
-    "ignorePatterns": ["./src/App/Salt3DCG/cpp/forjs/wasm_forweb.mjs"]
+    "ignorePatterns": [
+      "./src/App/Salt3DCG/cpp/forjs/wasm_forweb.mjs"
+    ]
   },
   "browserslist": {
     "production": [
@@ -60,11 +70,10 @@
     "babel-loader": "^8.2.3",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-es2016": "^6.24.1",
+    "html-loader": "^3.1.0",
     "html-webpack-plugin": "^5.5.0",
     "webpack": "^5.66.0",
     "webpack-cli": "^4.9.1"
   },
   "description": "My webpack project"
-  
 }
-
