--- a/salt_self/package.json
+++ b/salt_self/package.json
@@ -34,9 +34,14 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "webpack --mode=production --node-env=production",
+    "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
+
+    "webpack-start":"webpack-dev-server",
+    "webpack-build": "webpack --mode=production --node-env=production",
+    "webpack-test": "react-scripts test",
+    "webpack-eject": "react-scripts eject",
     "build:dev": "webpack --mode=development",
     "build:prod": "webpack --mode=production --node-env=production",
     "watch": "webpack --watch"
