--- a/salt_self/package.json
+++ b/salt_self/package.json
@@ -80,5 +80,6 @@
     "webpack": "^5.66.0",
     "webpack-cli": "^4.9.1"
   },
-  "description": "My webpack project"
+  "description": "My webpack project",
+  "homepage": "https://shio3001.github.io/SaltSelf/"
 }
