--- a/salt_self/package.json
+++ b/salt_self/package.json
@@ -82,5 +82,5 @@
     "webpack-cli": "^4.9.1"
   },
   "description": "My webpack project",
-  "homepage": "https://shio3001.github.io/SaltSelf/"
+  "homepage": "https://shio3001.github.io/SaltSelf"
 }
