--- a/salt_self/package.json
+++ b/salt_self/package.json
@@ -76,6 +76,7 @@
     "babel-loader": "^8.2.3",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-es2016": "^6.24.1",
+    "dotenv": "^14.3.0",
     "html-loader": "^3.1.0",
     "html-webpack-plugin": "^5.5.0",
     "webpack": "^5.66.0",
