--- a/salt_self/package.json
+++ b/salt_self/package.json
@@ -38,14 +38,14 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "webpack-start": "set PUBLIC_PATH=/ && webpack-dev-server",
+    "webpack-start": "webpack-dev-server --mode=development",
     "webpack-build": "webpack --mode=production --node-env=production",
     "webpack-test": "react-scripts test",
     "webpack-eject": "react-scripts eject",
     "build:dev": "webpack --mode=development",
     "build:prod": "webpack --mode=production --node-env=production",
     "watch": "webpack --watch",
-    "deploy": "set PUBLIC_PATH=./ && webpack --mode=production --node-env=production && gh-pages -d dist"
+    "deploy": "webpack --mode=production --node-env=production && gh-pages -d dist"
   },
   "eslintConfig": {
     "extends": [
