--- a/salt_self/package.json
+++ b/salt_self/package.json
@@ -1,6 +1,7 @@
 {
   "name": "my-webpack-project",
   "version": "1.0.0",
+  "homepage": "https://shio3001.github.io/SaltSelf",
   "private": true,
   "dependencies": {
     "@babel/preset-env": "^7.16.10",
@@ -82,6 +83,6 @@
     "webpack": "^5.66.0",
     "webpack-cli": "^4.9.1"
   },
-  "description": "My webpack project",
-  "homepage": "https://shio3001.github.io/SaltSelf"
+  "description": "My webpack project"
+  
 }
