--- a/salt_self/package.json
+++ b/salt_self/package.json
@@ -20,7 +20,7 @@
     "path-browserify": "^1.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-router-dom": "^6.2.1",
+    "react-router-dom": "6.2.1",
     "react-scripts": "5.0.0",
     "react-select": "^5.2.2",
     "stream": "^0.0.2",
@@ -84,5 +84,4 @@
     "webpack-cli": "^4.9.1"
   },
   "description": "My webpack project"
-  
 }
