--- a/salt_self/package.json
+++ b/salt_self/package.json
@@ -1,7 +1,7 @@
 {
   "name": "my-webpack-project",
   "version": "1.0.0",
-  "homepage": "https://shio3001.github.io/SaltSelf",
+  "homepage": "./",
   "private": true,
   "dependencies": {
     "@babel/preset-env": "^7.16.10",
