--- a/salt_self/package.json
+++ b/salt_self/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^13.5.0",
     "babel": "^6.23.0",
     "babel-plugin-transform-react-jsx": "^6.24.1",
+    "cross-env": "^7.0.3",
     "css-loader": "^6.5.1",
     "exports-loader": "^3.1.0",
     "file-loader": "^6.2.0",
