--- a/salt_self/package.json
+++ b/salt_self/package.json
@@ -4,7 +4,8 @@
   "homepage": "https://shio3001.github.io/SaltSelf",
   "private": true,
   "dependencies": {
-    "@babel/preset-env": "^7.16.10",
+    "@babel/preset-env": "^7.16.11",
+    "@babel/runtime": "^7.17.2",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
@@ -72,6 +73,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.16.7",
+    "@babel/plugin-transform-runtime": "^7.17.0",
     "@babel/preset-react": "^7.16.7",
     "@webpack-cli/generators": "^2.4.1",
     "babel-core": "^6.26.3",
